kodekloud/lightningLabs/lightningLab1/time-check-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: time-check
  name: time-check
  namespace: dvl1987
spec:
  volumes:
    - name: log-volume
      emptyDir: {}
  containers:
  - image: busybox
    name: time-check
    command: ['sh', '-c', 'while true; do date; sleep $TIME_FREQ;done > /opt/time/time-check.log']
    volumeMounts:
      - name: log-volume
        mountPath: /opt/time
